--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/coding_events_demo
-spring.datasource.username=coding_events_demo
+spring.datasource.url=jdbc:mysql://localhost:3306/coding_events
+spring.datasource.username=coding_events
 spring.datasource.password=Learn2code!
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
 
 # Show or not log for each sql query
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 
 # Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
